samples/_failures_safe/1761629813_85f347_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7898114a.c: In function ‘main’:
./samples/SAFE/__tmp_7898114a.c:120:15: error: expected ‘;’ at end of input
  120 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_7898114a.c:120:9: error: expected declaration or statement at end of input
  120 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_7898114a.c:120:9: error: expected declaration or statement at end of input
